--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -7,7 +10,10 @@ target/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/shelf/
+.idea/workspace.xml
 .idea/libraries/
+
 *.iws
 *.iml
 *.ipr
