--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.comp2013_psyda5/comp2013psyda5.Start
+                            <mainClass>com.example.comp2013_psyda5/psyda5.SnakeGame.Start
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
