--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>Comp2013psyda5</artifactId>
+    <groupId>com.DominionDMS</groupId>
+    <artifactId>SnakeGame</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Comp2013_psyda5</name>
 
