--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.DominionDMS</groupId>
     <artifactId>SnakeGame</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Comp2013_psyda5</name>
+    <name>SnakeGame</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -164,7 +164,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.comp2013_psyda5/comp2013psyda5.Start
+                            <mainClass>com.DominionDMS.SnakeGame/comp2013psyda5.SnakeGame.Application.SnakeGame
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
